VERSION[1.2.10][2016/11/21]
 * Added support for Unholy Might; you can enable it in the Configuration tab in the Combat section
 * Added a Sort button to the "All items" list in the Items tab
 * Improved keyboard interaction throughout the program:
	* Enabled keyboard navigation for all lists
    * 'Enter' now accepts confirmation popups, and other popups such as "Save As"
	* Dropdown lists can be cycled with Up/Down as well as the mousewheel
 * Fixed Elreon's -mana cost modifier increasing the mana cost instead of decreasing it
VERSION[1.2.9][2016/11/20]
 * Blade Flurry now shows DPS instead of average damage
 * Fixed stat counts not showing for some radius jewels
VERSION[1.2.8][2016/11/20]
 * Fixed dodge not being capped at 75%
 * Fixed missing area damage flag on Ancestral Warchief
 * Various minor tweaks and fixes
VERSION[1.2.7][2016/11/18]
 * Added support for the 3 new skills: Blade Flurry, Blight and Scorching Ray
 * Added support for Wither
    * The debuff will apply automatically when the skill is enabled
	* Change the skill part while Wither is selected in the sidebar to choose the stack count
 * Added a "Save As" button
 * Various minor tweaks
VERSION[1.2.6][2016/11/12]
 * Added support for the "more Physical Damage" modifier on "Outmatch and Outlast"
 * Added a splash damage skill part to Fireball
VERSION[1.2.5][2016/11/08]
 * Fixed bug preventing Static Strike damage from being calculated correctly
VERSION[1.2.4][2016/11/06]
 * Fixed a few minor bugs
VERSION[1.2.3][2016/11/04]
 * Fixed an error in the Calcs tab
VERSION[1.2.2][2016/11/04]
 * Fixed interaction between Lioneye's Fall and Serpent Stance
 * Added support for the Cast on Critical Strike gem (just the gem, no special calculations for CoC yet)
VERSION[1.2.1][2016/11/03]
 * Fixed error caused by Lioneye's Fall
VERSION[1.2.0][2016/11/02]
With this update, the program's internal modifier system has been completely overhauled.